--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^0.8.3",
     "bluebird": "^2.9.27",
     "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.5",
     "dotenv": "^1.1.0",
     "express": "^4.12.4",
     "express-session": "^1.11.2",
