--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "body-parser": "^1.12.4",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.1.0",
+    "errorhandler": "^1.3.6",
     "express": "^4.12.4",
+    "express-flash": "0.0.2",
     "express-session": "^1.11.2",
+    "express-validator": "^2.11.0",
+    "lusca": "^1.1.0",
+    "method-override": "^2.3.3",
     "mongoose": "^4.0.4",
+    "morgan": "^1.5.3",
     "multer": "^0.1.8",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
