--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node_modules/.bin/nodemon"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "errorhandler": "^1.3.6",
     "express": "^4.12.4",
     "express-flash": "0.0.2",
+    "express-hbs": "^0.8.4",
     "express-session": "^1.11.2",
     "express-validator": "^2.11.0",
     "lusca": "^1.1.0",
@@ -37,5 +39,8 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
     "sendgrid": "^1.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.3.7"
   }
 }
