--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^0.8.3",
     "bluebird": "^2.9.27",
     "body-parser": "^1.12.4",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "dotenv": "^1.1.0",
     "errorhandler": "^1.3.6",
