--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^4.0.4",
     "morgan": "^1.5.3",
     "multer": "^0.1.8",
+    "node-uuid": "^1.4.3",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
