--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
+    "request": "^2.57.0",
     "sendgrid": "^1.8.0"
   },
   "devDependencies": {
