--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-meetup": "^0.1.2",
     "passport-twitter": "^1.0.3",
     "request": "^2.57.0",
     "sendgrid": "^1.8.0"
